------------------------------------------------------------------------
r56 | tholbroo | 2004-04-14 13:50:01 -0700 (Wed, 14 Apr 2004) | 2 lines

Release branch for CPAN upload

------------------------------------------------------------------------
r54 | tholbroo | 2004-04-14 13:35:07 -0700 (Wed, 14 Apr 2004) | 2 lines

Changed version number in anticipation of branching a CPAN version.

------------------------------------------------------------------------
r49 | tholbroo | 2004-04-14 11:48:48 -0700 (Wed, 14 Apr 2004) | 2 lines

Removed extraneous directory

------------------------------------------------------------------------
r48 | tholbroo | 2004-04-14 11:05:02 -0700 (Wed, 14 Apr 2004) | 3 lines

First version, prepped for CPAN upload


------------------------------------------------------------------------