@@ -1,7 +1,12 @@
 ------------------------------------------------------------------------
-r56 | tholbroo | 2004-04-14 13:50:01 -0700 (Wed, 14 Apr 2004) | 2 lines
+r92 | tholbroo | 2004-05-18 10:59:44 -0700 (Tue, 18 May 2004) | 2 lines
 
-Release branch for CPAN upload
+Updated version number for CPAN release.
+
+------------------------------------------------------------------------
+r82 | tholbroo | 2004-04-26 13:50:36 -0700 (Mon, 26 Apr 2004) | 2 lines
+
+Added support for searching without search terms (which should return everything).  Submitted by James Tolley.
 
 ------------------------------------------------------------------------
 r54 | tholbroo | 2004-04-14 13:35:07 -0700 (Wed, 14 Apr 2004) | 2 lines
